@@ -7,6 +7,8 @@ use List::Util;
 use Locale::TextDomain qw(App-Sqitch);
 use App::Sqitch::X qw(hurl);
 
+our $VERSION = '0.970';
+
 sub new {
     my $class = shift;
     my $self = bless {
