@@ -8,6 +8,8 @@ use App::Sqitch::X qw(hurl);
 use Locale::TextDomain qw(App-Sqitch);
 use namespace::autoclean;
 
+our $VERSION = '0.970';
+
 has conflicts => (
     is       => 'ro',
     isa      => 'Bool',
