@@ -4,6 +4,8 @@ use 5.010;
 use strict;
 use utf8;
 
+our $VERSION = '0.970';
+
 sub new {
     my $class = shift;
     my (@list, %index);
