@@ -12,6 +12,7 @@ Revision history for Perl extension App::Sqitch
      - Added the Oracle engine.
      - Added `sqitchtutorial-oracle.pod`, a Oracle-specific variant of
        `sqitchtutorial.pod`.
+     - Added missing version declaration to the App::Sqitch::Plan::* modules.
 
 0.965  2013-04-23T16:25:59Z
      - Fixed failing test due to line-ending character variations on Windows.
